# Rumi-protocol

./: .env.local  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  test_treasury_integration.sh
documentation/: iUSD.md
src/ledger/: ic-icrc1-ledger.wasm
src/rumi_protocol_backend/: Cargo.toml  rumi_protocol_backend.did
src/rumi_protocol_backend/numeric/: tests.rs
src/rumi_protocol_backend/src/: dashboard.rs  event.rs  guard.rs  health_monitor.rs  lib.rs  liquidity_pool.rs  main.rs  management.rs  numeric.rs  state.rs  test_helpers.rs  tests.rs  types.rs  vault.rs  xrc.rs
src/rumi_protocol_backend/tests/: mock_sequence_fix.rs  mock_xrc_canister.rs  pocket_ic_tests.rs  tests.rs
src/rumi_protocol_frontend/: index.html  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json
src/rumi_protocol_frontend/src/: App.js  app.css
src/rumi_stability_pool/: Cargo.toml  README.md  rumi_stability_pool.did
src/rumi_stability_pool/src/: lib.rs  monitor.rs  pool.rs  types.rs
src/rumi_treasury/: Cargo.toml
src/rumi_treasury/src/: lib.rs  state.rs  tests.rs  types.rs
src/rumi_vault/: Cargo.toml  rumi_vault.did
src/rumi_vault/src/: blocks.rs  lib.rs
src/rumi_vault/test_utils/: Cargo.toml
src/stability_pool/src/: deposits.rs  lib.rs  liquidation.rs  logs.rs  main.rs  state.rs  types.rs
src/vault_frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
src/vault_frontend/assets/: .ic-assets.json5
(+75 files in other folders)
