[package]
name = "rumi_vault"
version = "0.1.0"
edition = "2021"
description = "iUSD"


[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.10.10"
icrc-ledger-types = "0.1.6"
ic-stable-structures = "0.6.5"
ic-cdk = "0.16.0"
ic-cdk-timers = "0.10.0"
serde = "1.0.210"
ic-cdk-macros = "0.16"
ciborium = "0.2"
ic-crypto-sha2 = { git = "https://github.com/dfinity/ic", package = "ic-crypto-sha2" }
serde_bytes = "0.11"
num-traits = "0.2"
num-bigint = "0.4"
hex = "0.4"
thiserror = "1.0"
ic-ledger-core =  { git = "https://github.com/dfinity/ic", package = "ic-ledger-core" }
ic-ledger-hash-of =  { git = "https://github.com/dfinity/ic", package = "ic-ledger-hash-of" }
ic-ledger-canister-core = { git = "https://github.com/dfinity/ic", package = "ic-ledger-canister-core" }